enable html5-mode (+ fix grunt http server)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "snotes20",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "connect-modrewrite": "~0.5.11"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
