--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,9 @@
     "angular": "1.2.6",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
-    "angular-route": "~1.2.11"
+    "angular-route": "~1.2.11",
+    "angular-translate": "~1.1.1",
+    "angular-translate-loader-static-files": "~0.1.6"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
