--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,19 @@
   "name": "snotes20",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.6",
+    "angular": "1.2.11",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "angular-route": "~1.2.11",
     "angular-translate": "~1.1.1",
-    "angular-translate-loader-static-files": "~0.1.6"
+    "angular-translate-loader-static-files": "~0.1.6",
+    "angular-cookies": "~1.2.11"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
     "angular-scenario": "1.2.6"
   },
   "resolutions": {
-    "angular": "1.2.6"
+    "angular": "1.2.11"
   }
 }
