--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-cookies": "1.2.16",
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
-    "angular-route": "1.2.16"
+    "angular-route": "1.2.16",
+    "restangular": "~1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
