--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-route": "1.2.16",
+    "fira": "~0.1.0",
     "restangular": "~1.4.0"
   },
   "devDependencies": {
