--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "fira": "~0.1.0",
     "angular-spectrum-colorpicker": "1.0.13",
     "angular-busy": "~4.1.0",
+    "ngLocale": "*",
     "restangular": "~1.4.0"
   },
   "devDependencies": {
