--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "angular-spectrum-colorpicker": "1.0.14",
     "angular-busy": "~4.1.0",
     "ngLocale": "*",
+    "osf-export-templates": "0.0.1",
+    "handlebars": "1.3.0",
     "restangular": "~1.4.0"
   },
   "devDependencies": {
