--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-busy": "~4.1.0",
     "ngLocale": "*",
     "osf-export-templates": "0.0.1",
-    "handlebars": "1.3.0",
+    "nunjucks": "~1.1.0",
     "restangular": "~1.4.0",
     "angular-socket-io": "~0.6.0"
   },
