--- a/bower.json
+++ b/bower.json
@@ -2,25 +2,29 @@
   "name": "snotes30",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.16",
-    "angular-resource": "1.2.16",
-    "angular-cookies": "1.2.16",
-    "angular-sanitize": "1.2.16",
-    "angular-animate": "1.2.16",
-    "angular-route": "1.2.16",
+    "angular": "1.3.1",
+    "angular-resource": "1.3.1",
+    "angular-cookies": "1.3.1",
+    "angular-sanitize": "1.3.1",
+    "angular-animate": "1.3.1",
+    "angular-route": "1.3.1",
     "fira": "~0.1.0",
-    "angular-spectrum-colorpicker": "1.0.14",
+    "angular-spectrum-colorpicker": "1.2.1",
     "angular-busy": "~4.1.0",
     "ngLocale": "*",
     "osf-export-templates": "0.0.1",
     "nunjucks": "~1.1.0",
     "restangular": "~1.4.0",
     "angular-ui-router": "~0.2.11",
-    "angular-socket-io": "~0.6.0"
+    "angular-socket-io": "~0.6.0",
+    "socket.io-client": "~1.2.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16"
+    "angular-mocks": "1.3.1",
+    "angular-scenario": "1.3.1"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "angular": "1.3.1"
+  }
 }
