--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-djangorestframework
-django-cors-headers
-markdown
-django-filter
-hoerapi
-django-extensions
-psycopg2
-osf
-rabbitpy
-etherpad_lite
-rules
-pillow
+djangorestframework==2.4.4
+django-cors-headers==0.13
+markdown==2.5.1
+django-filter==0.8
+hoerapi==1.3
+django-extensions==1.4.6
+psycopg2==2.5.4
+osf==1.9
+rabbitpy==0.23.0
+etherpad_lite==0.2.1
+rules==0.3
+pillow==2.6.1
 pyyaml==3.11
-python-dateutil==2.0
+python-dateutil==2.2
 Django==1.7.1
 
