--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "restangular": "~1.4.0",
     "angular-ui-router": "~0.2.11",
     "angular-socket-io": "~0.6.0",
+    "angucomplete-alt": "~0.0.31",
     "socket.io-client": "~1.2.0"
   },
   "devDependencies": {
