--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "amqplib": "^0.2.1",
     "nconf": "^0.6.9",
-    "socket.io": "^1.0.6",
+    "socket.io": "1.2.0",
     "winston": "^0.7.3"
   }
 }
