--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-busy": "~4.1.0",
     "ngLocale": "*",
     "osf-export-templates": "0.5.0",
-    "nunjucks": "~1.1.0",
+    "nunjucks": "https://github.com/dhendo/nunjucks.git#replace-replace",
     "restangular": "~1.4.0",
     "angular-ui-router": "~0.2.11",
     "angular-socket-io": "~0.6.0",
