--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "angular-ui-router": "~0.2.11",
     "angular-socket-io": "~0.6.0",
     "angucomplete-alt": "~0.0.31",
-    "socket.io-client": "1.2.0"
+    "socket.io-client": "1.2.0",
+    "angular-translate": "~2.6.0",
+    "angular-translate-loader-static-files": "~2.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.1",
