--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-nunjucks": "^0.1.4",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
@@ -24,6 +23,8 @@
     "grunt-karma": "^0.8.3",
     "grunt-newer": "^0.7.0",
     "grunt-ngmin": "^0.0.3",
+    "grunt-nunjucks": "^0.1.4",
+    "grunt-po2json-angular-translate": "0.0.3",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
