--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "grunt-google-cdn": "^0.4.0",
     "grunt-karma": "^0.8.3",
     "grunt-newer": "^0.7.0",
-    "grunt-ngmin": "^0.0.3",
+    "grunt-ng-annotate": "^1.0.1",
     "grunt-nunjucks": "^0.1.4",
     "grunt-po2json-angular-translate": "0.0.3",
     "grunt-replace": "^0.10.2",
